Fix calculation of G1 effective scanned cards prediction

XMLWordPrintable

    • gc
    • b20

      When calculating base time needed for evacuation, G1 tries to predict the cards that are actually scanned during the next gc. This calculation is bugged:

        size_t effective_scanned_cards = _analytics->predict_scan_card_num(rs_length, collector_state()->in_young_only_phase());

      The calculation completely ignores the cards pending in the log buffers which often make up a significant part of the prediction.

            Assignee:
            Thomas Schatzl
            Reporter:
            Thomas Schatzl
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: