8294847: Fix calculation of G1 effective scanned cards prediction

Reviewed-by: kbarrett, ayang